# arjancode-challenge-I

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/alpha_vantage_api/: config.py  exceptions.py  limit_count.py  models.py  operations.py
src/app/db/: __init__.py  base.py  engine.py  engine_av_search.py  exceptions.py  models.py
src/app/db/av_search/: engine.py  models.py  operations.py
src/app/db/av_stock_data/: models.py  operations.py
src/app/db/v0/: engine.py  exceptions.py  models.py  operations.py
test/alpha_vantage_api/: test_limit_count.py
test/db/: test_av_search_db.py  test_av_stock_hist_db.py
test/db/v0/: test_db_operations.py
