[tool.poetry]
name = "ac-next-lvl-py-challenge"
version = "0.1.0"
description = ""
authors = ["Philipp Walter <philipp-walter@web.de>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
uvicorn = "^0.34.0"
requests = "^2.32.3"
dash = "^2.18.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"